@@ -2,7 +2,6 @@ package nl.ramsolutions.sw.magik.checks;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import nl.ramsolutions.sw.magik.checks.checks.CommentedCodeCheck;
 import nl.ramsolutions.sw.magik.checks.checks.DuplicateMethodInFileCheck;
 import nl.ramsolutions.sw.magik.checks.checks.EmptyBlockCheck;
@@ -117,6 +116,6 @@ public final class CheckList {
   public static List<Class<? extends MagikCheck>> getDisabledByDefaultChecks() {
     return getChecks().stream()
         .filter(checkClass -> checkClass.getAnnotation(DisabledByDefault.class) != null)
-        .collect(Collectors.toList());
+        .toList();
   }
 }
