@@ -7,7 +7,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
-import java.util.stream.Collectors;
 import nl.ramsolutions.sw.magik.Location;
 import nl.ramsolutions.sw.magik.analysis.typing.types.ExpressionResultString;
 import nl.ramsolutions.sw.magik.analysis.typing.types.TypeString;
@@ -170,9 +169,7 @@ public class ProcedureDefinition extends TypeStringDefinition {
         this.modifiers,
         this.typeName,
         this.procedureName,
-        this.parameters.stream()
-            .map(ParameterDefinition::getWithoutNode)
-            .collect(Collectors.toList()),
+        this.parameters.stream().map(ParameterDefinition::getWithoutNode).toList(),
         this.returnTypes,
         this.loopTypes,
         this.usedGlobals,
